# icube_robot_supervisor

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  package.xml
config/: parameters.yaml  tasks_i2r.yaml  tasks_ros.yaml
launch/: adaptor.launch
scripts/: main.py
scripts/TaskManager/: task.py
scripts/TaskManager/CommandProcessor/: commandProcessor.py
scripts/TaskManager/CommandProcessor/ComInterface/: communicationHandler.py  mqttHandler.py
scripts/TaskManager/Tasks/: depth_camera_monitor.py  initialize.py  motor_filter_switch.py
