<?xml version="1.0"?>
<package format="2">
  <name>robot_supervisor</name>
  <version>0.0.0</version>
  <description>The supervisor package</description>

  <maintainer email="achala.c.athukorala@ieee.org">achala</maintainer>

  <license>GNU</license>
  <!--url type="website">https://github.com/acachathuranga/iCube_mqtt_adaptor.git</url--> 
  <author email="achala.c.athukorala@ieee.org">achala</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
